:bug: fix: Fix small RHS table overflow in mobiles in `main.css`

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -275,6 +275,7 @@ td
     .week
     {
         margin-bottom: 10%;
+        padding: 0;
     }
 
     .week-info
